# raspibotv2-kait2026

./: .gitignore  CLAUDE.md  NOTICES.txt  PRD.md  cloudflared.service  docker-compose.yaml  livestream_youtube.sh  nrt-a08.ipvanish.com.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  benchmark_phase2.py  context_manager.py  entrypoint.sh  requirements.txt  vulkan_test.py  vulkan_test_result.md
backend/data/: access.db  build_context_objects365.py  context.db  export_context.py  places365.csv
backend/models/: RESULT_BENCHMARK_MODEL.md  change_format_model.py  check_model.py  phase1_model.py
backend/static/: script.js  style.css
backend/templates/: index.html  manage_context.html  research-log.html  research.html  research_demo.html
backend_cpp/: CMakeLists.txt  README.md
backend_cpp/src/: main.cpp
backend_rust/: Cargo.toml  export_model.py
backend_rust/src/: camera.rs  main.rs  yolo.rs
docs/: README.txt  adaptive_hierarchical_detection_report.html  md_to_pdf.py  places365_coco80_context_pipeline.md  prof_takano_guide.txt  system_progress_report_2026-03-10.md  system_progress_report_2026-03-11.md  system_progress_report_2026-03-19.md
docs/paper_edge_inference/: build.sh  paper.tex  references.bib
docs/references/: links.txt
docs/seminar/: build.sh  main.tex  presentation.html
frontend/: .env.example  Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx
notebooks/: generate_frozen_models_coco80.ipynb  generate_scene_models.ipynb  yolov8s_world_objects365_finetune.ipynb
(+32 files in other folders)
